[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
lazy_static = "1.4.0"
serde_yaml = "0.9.10"
directories = "4.0.1"
tokio = { version = "1.18.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }